--- a/export excel/index.html
+++ b/export excel/index.html
@@ -11,14 +11,14 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<label for="quantity">Số lượng:</label>
+		<label for="quantity">Quantity:</label>
 		<input type="number" id="quantity" name="quantity" min="1" value="10"><br><br>
 	
-		<label for="filename">Tên file Excel:</label>
+		<label for="filename">Excel file name:</label>
 		<input type="text" id="filename" name="filename" value="Users"><br><br>
 	
-		<button onclick="getData()">Lấy dữ liệu mới</button>
-		<button onclick="exportToExcel()">Xuất ra Excel</button><br><br>
+		<button onclick="getData()">Get new data</button>
+		<button onclick="exportToExcel()">Export to Excel</button><br><br>
 	
 		<table id="data">
 			<tbody></tbody>
