add merged excel + update import excel
merged excel is a web that combine both import and export excel ( still in development )

import excel update hidden scroll + add a border for data imported

--- a/import excel/index.html
+++ b/import excel/index.html
@@ -17,7 +17,7 @@
             <select id="sheet"></select>
             <button class="load-button" onclick="handleSheetSelection()">Load Sheet</button>
         </div>
-        <div id="output"></div>
+        <div class="table-container" id="output"></div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.0/xlsx.full.min.js"></script>
