--- a/export excel/index.html
+++ b/export excel/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Export to Excel</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script lang="javascript" src="dist/xlsx.full.min.js"></script>
-		<script src="excel.js"></script>
+		<script lang="javascript" src="xlsx.full.min.js"></script>
+		
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
@@ -24,5 +24,5 @@
 			<tbody></tbody>
 		</table>
 	</body>
-	
+	<script src="excel.js"></script>
 </html>
