--- a/export excel/index.html
+++ b/export excel/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Export to Excel</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script lang="javascript" src="xlsx.full.min.js"></script>
-		
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Export to Excel</title>
+
+
+	<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+	<div class="container">
 		<label for="quantity">Quantity:</label>
 		<input type="number" id="quantity" name="quantity" min="1" value="10"><br><br>
-	
+
 		<label for="filename">Excel file name:</label>
-		<input type="text" id="filename" name="filename" value="Users"><br><br>
-	
+		<input type="text" id="filename" name="filename" value="Book1"><br><br>
+
 		<button onclick="getData()">Get new data</button>
 		<button onclick="exportToExcel()">Export to Excel</button><br><br>
-	
+
 		<table id="data">
 			<tbody></tbody>
 		</table>
-	</body>
+	</div>
 	<script src="excel.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script lang="javascript" src="xlsx.full.min.js"></script>
+</body>
+
+
 </html>
